--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -101,6 +101,9 @@ a {
 
 /* Section - Our Facilities */
 
+#facilities {
+  padding-bottom: 3rem;
+}
 
 .facilities-card img {
   height: 400px;
@@ -114,6 +117,21 @@ a {
 
 #book-now {
   width: 80%;
+}
+
+/* Section - Footer */
+
+footer nav {
+  border-bottom: 1px #eee solid;
+}
+
+footer nav.navbar {
+  padding: .5rem 0;
+}
+
+.social-media i {
+  padding-left: 1.5rem;
+  color: #fff;
 }
 
 /* Responsiveness */
@@ -137,5 +155,10 @@ a {
     width: 100%;
     text-align: center;
     flex-direction: column;
+  }
+
+  footer div div:last-child {
+    flex-direction: column;
+    text-align: center;
   }
 }
