adding start up files for facilities page

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -24,6 +24,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display';
 }
 
+/* Nav Section */
+
 a {
   text-decoration: none;
   cursor: pointer;
