Added margin to the nav items(lists)

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -51,6 +51,11 @@ a {
   background: var(--light-dark-color);
 }
 
+/* Navigation bar*/
+.nav-item {
+  margin-right: 1.3rem;
+}
+
 
 /* Section - Hero */
 
