--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -20,7 +20,12 @@ body {
   color: #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Playfair Display';
 }
 
@@ -41,8 +46,14 @@ a {
   border-radius: 0;
 }
 
-.btn-primary {
-  background: var(--primary-color);
+.btn-primary,
+.btn-primary:hover {
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+}
+
+.btn-primary:hover {
+  opacity: 0.8;
 }
 
 .dark-gray {
@@ -62,7 +73,7 @@ a {
 /* Section - Hero */
 
 #hero {
-  background: url('../img/hero.jpg') no-repeat center center/cover;
+  background: url('../img/hero.jpeg') no-repeat center center/cover;
   background-attachment: fixed;
 }
 
@@ -137,9 +148,13 @@ footer nav.navbar {
   padding: .5rem 0;
 }
 
-.social-media i {
+.social-media a {
   padding-left: 1.5rem;
   color: #fff;
+}
+
+.social-media a:hover {
+  color: var(--primary-color);
 }
 
 /* Responsiveness */
@@ -165,13 +180,22 @@ footer nav.navbar {
     flex-direction: column;
   }
 
-  footer div div:last-child {
+  footer nav .navbar-brand {
+    margin-bottom: 2rem;
+  }
+
+  footer div div:last-child,
+  footer nav {
     flex-direction: column;
     text-align: center;
   }
+
+  .social-media a:first-child {
+    padding-left: 0;
+  }
 }
 
-/*Facilities page*/
+/* Facility Body */
 .facility-body {
   background-color: var(--dark-color);
 }
