--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -204,3 +204,32 @@ footer nav.navbar {
 .intro-text {
   color: rgba(255, 255, 255, 0.7);
 }
+
+/*Utility class*/
+.mt-10 {
+  margin-top: 7rem;
+}
+
+.mt-6 {
+  margin-top: 4rem;
+}
+
+
+.facility-body {
+  background-color: var(--dark-color);
+}
+
+/* Facilities image-gallery*/
+.watermark{
+  width: 1000px;
+  height: 550px;
+  position: absolute;
+  z-index: -1;
+  background-color: var(--light-dark-color);
+  top: 30px;
+  right: -400px;
+}
+.watermark--2 {
+  position: absolute;
+  right: -90px;
+}
